# pystack

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
examples/: gradebook.pbl  hello.pbl
src/pystack/: __init__.py  cli.py  environment.py
src/pystack/adapters/: __init__.py  db_storage.py  os_pebble.py  pebble_db.py
src/pystack/plugins/: __init__.py  _shared.py  base.py  coldb_plugin.py  crypto_plugin.py  docdb_plugin.py  git_plugin.py  graphdb_plugin.py  kv_plugin.py  mq_plugin.py  net_plugin.py  registry.py  search_plugin.py  tsdb_plugin.py  vecdb_plugin.py  web_plugin.py
src/pystack/web/: __init__.py  app.py
src/pystack/web/static/: app.js  style.css
src/pystack/web/templates/: index.html
tests/: __init__.py  test_edge_cases.py  test_integration_plugins.py  test_nosql_plugins.py  test_os_integration.py  test_pebble_db.py  test_plugins.py  test_web.py
